--- a/class2182022.html
+++ b/class2182022.html
@@ -278,10 +278,10 @@
 				</section>
 				<section>
 					<h3> Order these...</h3>
-					<img src="img/order_shapes.png" alt="order items in picture">
+					<img src="img/order_shapes.PNG" alt="order items in picture">
 				</section> 
 				<section data-background="#fff">
-					<h3>Types of Sorting</h3>
+					<h3>A few types of sorting algorithms</h3>
 					
 					<div id="flexcontain">
 						<div class="box_two" style="font-size: 28px; margin: 10px;">
