adding changes to selection sort slide

--- a/class2182022.html
+++ b/class2182022.html
@@ -338,7 +338,7 @@
 
 				<section data-background="#fff" style="top: 120.5px; display: block;" class="has-light-background present">
 					<h3>Selection Sort Practice</h3>
-					<p style="font-size: 24px;">For this activity, practice the bubble sorting technique I used in the video and keep track of the number of comparisons and swaps</p>
+					<p style="font-size: 24px;">For this activity, practice the selection sorting technique I used in the video and keep track of the number of comparisons and swaps</p>
 
 					
 					<div id="flexcontain">
